--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -194,16 +194,15 @@ title: E R I C A E S O
                             from now</pre></div>
   </section>
 </section>
-
 <section class="esoesoeso three">
   <div class="content mystics">
     <h1>4 AMERICAN MYSTICS</h1>
     <div class="container">
       <div class="left">
-        <img data-sr="wait .25s, move 15px, reset" data-behavior="show-judith" src="images/judith.png">
-        <img data-sr="wait .25s, move 25px, reset" data-behavior="show-randy" src="images/randy.png">
-        <img data-sr="wait .25s, move 35px, reset" data-behavior="show-bell" src="images/bell.png">
-        <img data-sr="wait .25s, move 45px, reset" data-behavior="show-iris" src="images/iris.png">
+        <img data-sr="wait .25s, move 15px, reset" data-name="judith" data-behavior="show-mystic-content" src="images/judith.png">
+        <img data-sr="wait .25s, move 25px, reset" data-name="randy" data-behavior="show-mystic-content" src="images/randy.png">
+        <img data-sr="wait .25s, move 35px, reset" data-name="bell" data-behavior="show-mystic-content" src="images/bell.png">
+        <img data-sr="wait .25s, move 45px, reset" data-name="iris" data-behavior="show-mystic-content" src="images/iris.png">
       </div>
       <div class="show iris video-wrapper">
         <div class="video-container">
