--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,10 @@ title: E R I C A E S O
 
 <section class="esoesoeso one">
   <div class="content">
-    <div data-sr="wait .25s, move 15px, reset">
+    <div data-sr="move 35px, reset">
+      <a data-behavior="scroll-to-follo" class="follo-button"><span>FOLLOW</span></a>
+    </div>
+    <div data-sr="move 15px, reset">
       <a class="purchase-button" target="_blank" href="https://ramplocal.bandcamp.com/" class="ramp-local"><span>Click here purchase Cassette and CD from Ramp Local Records</span></a>
     </div>
     <div class="video-wrapper">
@@ -14,7 +17,7 @@ title: E R I C A E S O
       </div>
     </div>
     <div data-sr="wait .25s, move 15px, reset">
-      <a class="press-button" href="#eso-press"><span>Press</span></a>
+      <a data-behavior="scroll-to-press" class="press-button"><span>Press</span></a>
     </div>
 </section>
 <section class="esoesoeso two dates">
@@ -224,7 +227,7 @@ title: E R I C A E S O
   </div>
 </section>
 <section class="esoesoeso four">
-  <div class="content">
+  <div id="follo" class="content">
     <div class="social">
       <p>follo erica eso</p>
       <a target="_blank" href="https://www.facebook.com/EricaEsoMusic">facebook</a>
