--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,7 @@
 ---
 title: E R I C A E S O
 ---
-
+<div id="preload">LOOOOOAADDDINNNNNGGG</div>
 <section class="esoesoeso one">
   <div class="content">
     <div data-sr="move 35px, reset">
