--- a/source/stylesheets/_home.scss
+++ b/source/stylesheets/_home.scss
@@ -1,4 +1,7 @@
 @import "mix";
+.no-js #preload { display: none;  }
+.js #preload { display: block; position: absolute; left: 0; top: 0; right: 0;
+padding: 60px; width: 100%;height: 100%; overflow: hidden;   background: rgba(220, 183, 255, 1); color: #fff; font-size: 1em; z-index: 99999999;}
 a {
   color: inherit;
   text-decoration: none;
