--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,9 +2,10 @@
 title: E R I C A E S O
 ---
 <div id="preload">LOOOOOAADDDINNNNNGGG</div>
+<div class="arrow" data-behavior="scroll-to-top">&uarr;</div>
 <section class="esoesoeso one">
   <div class="content">
-    <div data-sr="move 35px, reset">
+    <div data-sr="move 25px, reset">
       <a data-behavior="scroll-to-follo" class="follo-button"><span>FOLLOW</span></a>
     </div>
     <div data-sr="move 15px, reset">
