--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,8 +13,7 @@ title: E R I C A E S O
     </div>
     <div class="video-wrapper">
       <div class="video-container" data-sr="wait .25s, move 15px, reset">
-        <iframe width="100%" src="https://www.youtube.com/embed/kVim_AOb0rs?modestbranding=1&autohide=1&showinfo=0&controls=0" frameborder="0" allowfullscreen></iframe>
-        <div class="border"></div>
+        <iframe width="100%" src="https://www.youtube.com/embed/Kas6UvlbG3Y" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
     <div data-sr="wait .25s, move 15px, reset">
@@ -23,18 +22,25 @@ title: E R I C A E S O
 </section>
 <section class="esoesoeso two dates">
   <div class="content">
-    <a class="show-link" href="#">
+    <a target="_blank" class="show-link" href="https://www.facebook.com/events/1756734191223292/">
       <ul class="show-info">
-        <li>SUN DEC 6TH</li>
-        <li>BROOKLYN @ THE BELL HOUSE</li>
-        <li>W/ LAND, NELS CLINE, BIG THIEF, GEMMA, CASSANDRA JENKINS AND MANY MORE</li>
+        <li>THURS MARCH 24TH</li>
+        <li>BROOKLYN @ PALISADES</li>
+        <li>W/ LEAPLING (TOUR RETURN SHOW), VERY FRESH, AND ALEXANDER F</li>
       </ul>
     </a>
-    <a class="show-link" href="#">
+    <a target="_blank" class="show-link" href="https://www.facebook.com/events/831278297000884/">
       <ul class="show-info">
-        <li>SUN DEC 6TH</li>
-        <li>BROOKLYN @ THE BELL HOUSE</li>
-        <li>W/ LAND, NELS CLINE, BIG THIEF, GEMMA, CASSANDRA JENKINS AND MANY MORE</li>
+        <li>SUN APRIL 10TH</li>
+        <li>BROOKLYN @ BABY'S ALRIGHT</li>
+        <li>W/ LEVERAGE MODELS, KHALLEE and SOFT LIT</li>
+      </ul>
+    </a>
+    <a target="_blank" class="show-link" href="https://www.facebook.com/events/1150394578325282/">
+      <ul class="show-info">
+        <li>SUN APRIL 30TH</li>
+        <li>BROOKLYN @ SILENT BARN</li>
+        <li>W/ MIHO HATORI'S NEW OPTIMISM, REINA TERROR, DJ GEMMA</li>
       </ul>
     </a>
   </div>
