--- a/source/stylesheets/192.scss
+++ b/source/stylesheets/192.scss
@@ -1,6 +1,7 @@
 @import "mix";
 .esoesoeso.four {
   background: url('../images/yellow-gradient.jpg') no-repeat center center;
+  background-size: cover;
   position: relative;
   z-index: 999999;
   .social {
